= Changelog

All notable changes to Apiman will be documented here (as of Apiman 3).

// tag::3.1.2.Final[]
== 3.1.2.Final

=== Added

=== Changed

* A large number of dependencies have been updated across the Apiman codebase in order to improve security. By https://github.com/msavy[Marc Savy (@msavy)^].

=== Removed

=== Fixed

* [portal]: show REST API documentation even when user not logged in.
By https://github.com/bastiangem[Bastian Gembalczyk (@BastianGem)^] and https://github.com/volkflo[Florian Volk (@volkflo)^].

* [gateway-vertx]: do not include `null`/empty path elements in Keycloak discovery URI.
If your Vert.x Gateway API was unable to speak to Keycloak because it had an unexpected `null` in the URI, this should fix it. By https://github.com/msavy[Marc Savy (@msavy)^].

* [distro-ddl]: Multiple small MSSQL (Microsoft SQL Server) DDL fixes.
If you are using MSSQL, you should set the Java system property `hibernate.auto_quote_keyword=true` — in WildFly you can put this into the `properties` section of `standalone-apiman.xml`. By https://github.com/msavy[Marc Savy (@msavy)^].

* [manager-api-jpa]: Allow deletion of org with contracts. It should be possible to delete an organization with retired entities. By https://github.com/volkflo[Florian Volk (@volkflo)^].

* [gateway-engine-vertx]: Ensure API is resolved before using it. An old contribution did not respect asynchronous patterns properly. By https://github.com/msavy[Marc Savy (@msavy)^].

// end::3.1.2.Final[]

// tag::3.1.1.Final[]
== 3.1.1.Final

* No changes, this additional release was needed due to a problem with Apiman's CI/CD pipelines.
// end::3.1.1.Final[]

// tag::3.1.0.Final[]
== 3.1.0.Final

=== Added
